build adjustments